--- a/jelentkezes.html
+++ b/jelentkezes.html
@@ -70,16 +70,9 @@ function submitForm(){
 
 <body>
 <div class="se-pre-con"></div>
-  <div class="top-menu">
-    <ul data-scrollreveal="enter top over 0.5s after 0s">
-    <li><a href="index.html"><img id="mini-logo" src="img/schmoozelogo.png"></a></li>
-   	 <li><a href="kuldetesunk.html">küldetésünk</a></li>
-      <li><a href="cikkekoldal.php" >cikkek</a></li>
-      <!-- <li><a href="">oktatók</a></li> -->
-      <li><a href="treningek.html">tréningek</a></li>
-      <li><a href="kapcsolat.html">kapcsolat</a></li>
-    </ul>
-  </div>
+	<div id="topmenu" class="top-menu">
+		<script src="js/topmenu.js"></script>
+	</div>
 
   <div class="content-window">
 
